--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="container">
       <div data-w-id="80b451e6-0441-3fda-2ae0-e55b7119cfa8" style="opacity:0" class="div-block">
         <a href="mailto:citywallradio@gmail.com?subject=Hi%20City%20Wall%20Radio%E2%80%A6" class="nav-link w-nav-link">Contact</a>
-        <a href="http://citywallradio.com/" class="brand padding-m w-nav-brand"><img src="images/citywall-logo-stacked.svg" loading="lazy" alt=""></a>
+        <a href="https://citywallradio.com/" class="brand padding-m w-nav-brand"><img src="images/citywall-logo-stacked.svg" loading="lazy" alt=""></a>
         <a href="https://www.mixcloud.com/Citywall/" target="_blank" class="nav-link small w-nav-link">Archive</a>
       </div>
     </div>
@@ -167,7 +167,7 @@
           </div>
           <div class="play-pause-button">
             <h1 class="play-btn">Listen</h1>
-            <svg class="icon-play" xmlns="http://www.w3.org/2000/svg" width="18" height="24" viewbox="0 0 18 24">
+            <svg class="icon-play" xmlns="https://www.w3.org/2000/svg" width="18" height="24" viewbox="0 0 18 24">
               <path fill="#979e38" fill-rule="evenodd" d="M18 12L0 24V0" class="play-pause-icon" id="playPause"></path>
             </svg>
           </div>
@@ -180,7 +180,7 @@
             </div>
           </div>
           <audio crossorigin="">
-            <source src="http://citywallradio.out.airtime.pro:8000/citywallradio_a?_ga=2.171380896.1498095300.1676283801-1070983684.1676283801&_gac=1.149605060.1676297608.CjwKCAiA3KefBhByEiwAi2LDHOF2sGMPioJEtPb-wqcm4pZtRCFV7VF9C5xqrwtgBFv46LOwmh23JhoC61AQAvD_BwE" type="audio/mpeg">
+            <source src="https://citywallradio.out.airtime.pro:8000/citywallradio_a?_ga=2.171380896.1498095300.1676283801-1070983684.1676283801&_gac=1.149605060.1676297608.CjwKCAiA3KefBhByEiwAi2LDHOF2sGMPioJEtPb-wqcm4pZtRCFV7VF9C5xqrwtgBFv46LOwmh23JhoC61AQAvD_BwE" type="audio/mpeg">
           </audio>
         </div>
       </div>
